feat(added linters / ci / hooks): added linters to the project
Added ESLint, Stylelint, Prettier, and a lot of other usefull stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,72 @@
 {
-    "cSpell.words": [
-        "demi",
-        "nprogress",
-        "pinia",
-        "pnpm",
-        "vite",
-        "vitest",
-        "vueuse",
-        "windicss"
+    "css.validate": false,
+    "scss.validate": false,
+    "stylelint.enable": true,
+    "editor.codeActionsOnSave": {
+      "source.fixAll.stylelint": true,
+      "source.fixAll.eslint": true,
+      "source.organizeImports": true,
+      "source.fixAll.markdownlint": true,
+      "source.fixAll.prettier": true
+    },
+    "editor.quickSuggestions": {
+      "strings": true
+    },
+    "eslint.validate": [
+      "javascript",
+      "typescript",
+      "vue"
     ],
-    "i18n-ally.localesPaths": [
-        "locales"
-    ]
-}
+    "files.associations": {
+      "*.css": "postcss",
+      ".husky/commit-msg": "shellscript",
+      ".husky/pre-commit": "shellscript",
+      ".husky/pre-push": "shellscript",
+      ".importsortrc": "json",
+      ".markdownlintignore": "ignore"
+    },
+    // "files.autoSave": "afterDelay",
+    // "files.autoSaveDelay": 5000,
+    "i18n-ally.keystyle": "nested",
+    "i18n-ally.localesPaths": "locales",
+    "i18n-ally.sortKeys": true,
+    "material-icon-theme.activeIconPack": "vue_vuex",
+    "prettier.enable": true,
+    "prettier.configPath": ".prettierrc.json",
+    "sort-imports.languages": [
+      "javascript",
+      "typescript",
+      "vue"
+    ],
+    "stylelint.validate": [
+      "javascript",
+      "typescript",
+      "vue"
+    ],
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "workbench.iconTheme": "material-icon-theme",
+    "[javascript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[vue]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "cSpell.words": [
+      "demi",
+      "loglevel",
+      "nprogress",
+      "pinia",
+      "pnpm",
+      "preinstall",
+      "stylelint",
+      "unplugin",
+      "vite",
+      "vitest",
+      "vueuse",
+      "windicss"
+    ],
+  }
+  
