--- a/package.json
+++ b/package.json
@@ -7,13 +7,26 @@
     "build:prod": "cross-env NODE_ENV=production vite build",
     "build:prod:ssg": "cross-env NODE_ENV=production vite-ssg build",
     "build:preview": "vite preview",
+    "lint": "run-s lint:*",
+    "lint:types": "vue-tsc --noEmit",
+    "lint:css": "stylelint --fix \"**/*.{css,scss,vue}\"",
+    "lint:js": "eslint --fix --ext \"**/*.{js,ts,vue}\"",
+    "lint:imports": "import-sort --write \"src/**/*{.js,.ts,.vue}\"",
+    "lint:prettier": "prettier --write --loglevel error \"**/*.{js,ts,json,css,scss,vue,html}\"",
     "test": "pnpm test:unit:run",
     "test:unit:ui": "vitest --ui",
     "test:unit:run": "vitest run",
     "test:unit:coverage": "vitest --coverage",
     "test:e2e": "cypress open",
+    "test:ci:e2e": "cypress run --headless",
+    "audit": "run-s audit:*",
+    "audit:dev": "pnpm audit --json --dev",
+    "audit:prod": "pnpm audit --json --prod",
+    "audit:force:fix": "pnpm audit --fix",
+    "analyze:windicss": "npx windicss-analysis",
+    "release": "standard-version",
     "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install"
+    "postinstall": "husky install && chmod ug+x .husky/*"
   },
   "dependencies": {
     "@vueuse/core": "^7.5.3",
@@ -25,6 +38,7 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.16.0",
     "@commitlint/cli": "^16.0.2",
     "@commitlint/config-conventional": "^16.0.0",
     "@iconify-json/carbon": "^1.0.12",
@@ -40,8 +54,35 @@
     "commitizen": "^4.2.4",
     "critters": "^0.0.16",
     "cypress": "^9.2.1",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.3.0",
     "happy-dom": "^2.25.2",
     "husky": "^7.0.4",
+    "imagemin-lint-staged": "^0.4.0",
+    "import-sort": "^6.0.0",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-config": "^6.0.0",
+    "import-sort-parser-babylon": "^6.0.0",
+    "import-sort-parser-typescript": "^6.0.0",
+    "import-sort-style-eslint": "^6.0.0",
+    "lint-staged": "^12.1.7",
+    "npm-run-all": "^4.1.5",
+    "postcss-html": "^1.3.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-import-sort": "^0.0.7",
+    "sass": "^1.48.0",
+    "standard-version": "^9.3.2",
+    "stylelint": "^14.2.0",
+    "stylelint-config-css-modules": "^2.3.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.5.10",
     "unplugin-icons": "^0.13.0",
@@ -53,15 +94,11 @@
     "vite-plugin-windicss": "^1.6.2",
     "vite-ssg": "^0.17.6",
     "vitest": "^0.1.12",
+    "vue-tsc": "^0.30.2",
     "windicss": "^3.4.2"
   },
   "engines": {
     "node": ">=14.17.0",
     "pnpm": ">=6.21.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
   }
 }
