--- a/package.json
+++ b/package.json
@@ -100,5 +100,10 @@
   "engines": {
     "node": ">=14.17.0",
     "pnpm": ">=6.21.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
