--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,12 @@
 {
   "*.{js,jsx,ts,tsx}": ["pnpm lint:js", "pnpm lint:imports", "pnpm lint:prettier"],
-  "*.vue": ["pnpm lint:css", "pnpm lint:js", "pnpm lint:imports", "pnpm lint:prettier"],
+  "*.vue": [
+    "pnpm lint:types",
+    "pnpm lint:css",
+    "pnpm lint:js",
+    "pnpm lint:imports",
+    "pnpm lint:prettier"
+  ],
   "*.(s)?css": ["pnpm lint:css", "pnpm lint:prettier"],
   "*.{png,jpeg,jpg,gif,svg}": ["imagemin-lint-staged"],
   "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
