chore: update scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:prod": "cross-env NODE_ENV=production vite build",
     "build:prod:ssg": "cross-env NODE_ENV=production vite-ssg build",
     "build:preview": "vite preview",
-    "lint": "run-s lint:*",
+    "lint": "pnpm lint:types && pnpm lint:css && pnpm lint:js && pnpm lint:imports && pnpm lint:prettier",
     "lint:types": "vue-tsc --noEmit",
     "lint:css": "stylelint --fix \"**/*.{css,scss,vue}\"",
     "lint:js": "eslint --fix --ext \"**/*.{js,ts,vue}\"",
@@ -71,7 +71,6 @@
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-eslint": "^6.0.0",
     "lint-staged": "^12.1.7",
-    "npm-run-all": "^4.1.5",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "prettier-plugin-import-sort": "^0.0.7",
