--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:prod": "cross-env NODE_ENV=production vite build",
     "build:prod:ssg": "cross-env NODE_ENV=production vite-ssg build",
     "build:preview": "vite preview",
+    "build:preview:https": "serve dist",
     "lint": "pnpm lint:types && pnpm lint:css && pnpm lint:js && pnpm lint:imports && pnpm lint:prettier",
     "lint:types": "vue-tsc --noEmit",
     "lint:css": "stylelint --fix \"**/*.{css,scss,vue}\"",
@@ -34,6 +35,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.9",
     "vue": "^3.2.25",
+    "vue-demi": "^0.12.1",
     "vue-i18n": "^9.2.0-beta.26",
     "vue-router": "^4.0.12"
   },
@@ -53,6 +55,7 @@
     "c8": "^7.11.0",
     "commitizen": "^4.2.4",
     "critters": "^0.0.16",
+    "cross-env": "^7.0.3",
     "cypress": "^9.2.1",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
@@ -62,6 +65,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.3.0",
     "happy-dom": "^2.25.2",
+    "https-localhost": "^4.7.0",
     "husky": "^7.0.4",
     "imagemin-lint-staged": "^0.4.0",
     "import-sort": "^6.0.0",
