--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
     },
     "cSpell.words": [
       "demi",
+      "intlify",
       "loglevel",
       "nprogress",
       "pinia",
@@ -64,6 +65,7 @@
       "stylelint",
       "unplugin",
       "vite",
+      "vitejs",
       "vitest",
       "vueuse",
       "windicss"
