--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite --open --host --port 4400",
+    "dev:storybook": "start-storybook -p 6006",
+    "build:storybook": "build-storybook",
     "build:prod": "cross-env NODE_ENV=production vite build",
     "build:prod:ssg": "cross-env NODE_ENV=production vite-ssg build",
     "build:preview": "vite preview",
@@ -46,7 +48,11 @@
     "@iconify-json/carbon": "^1.0.12",
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
     "@pinia/testing": "^0.0.9",
+    "@storybook/addon-a11y": "^6.4.12",
+    "@storybook/addon-essentials": "^6.4.12",
+    "@storybook/vue3": "^6.4.12",
     "@types/node": "^17.0.8",
+    "@types/react": "link:src/types/types__react",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vitest/ui": "^0.1.12",
@@ -80,6 +86,7 @@
     "prettier-plugin-import-sort": "^0.0.7",
     "sass": "^1.48.0",
     "standard-version": "^9.3.2",
+    "storybook-builder-vite": "^0.1.13",
     "stylelint": "^14.2.0",
     "stylelint-config-css-modules": "^2.3.0",
     "stylelint-config-prettier": "^9.0.3",
