--- a/.prettierignore
+++ b/.prettierignore
@@ -6,6 +6,8 @@
 **/coverage/
 
 dist/
+storybook-static/
+
 locales/
 .vite-ssg-temp/
 .npmrc
@@ -15,4 +17,3 @@ node_modules/
 src/types/components.d.ts
 src/types/auto-imports.d.ts
 
-storybook-static
