--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,16 @@ jobs:
 
       - name: Build Distribution
         run: pnpm build:prod:ssg
+        
+      - run: pnpm test:unit:coverage
+      - uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+#           files: ./coverage1.xml,./coverage2.xml # optional
+#           flags: unittests # optional
+#           name: codecov-umbrella # optional
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
 
       # - name: Cypress PNPM Patch
       #   run: cp pnpm-lock.yaml package-lock.json
